syntax = "proto3";

package messaging.core;

message ServerAdvert {
  string server_id = 1;
  string display_name = 2;
  repeated string bootstrap_addresses = 3;
  bool is_public = 4;
}

message ChannelMessage {
  string channel_id = 1;
  bytes author_public_key = 2;
  uint64 logical_clock = 3;
  bytes ciphertext = 4;
}
